@@ -8,16 +8,17 @@ coefficients (of any order).  The functions are declared in the header
 file @code{gsl_poly.h}.
 
 @menu
-* Polynomial evaluation::       
-* Quadratic equations::         
-* Cubic equations::             
-* General polynomial equations::  
+* Polynomial Evaluation::       
+* Divided Difference Representation of Polynomials::  
+* Quadratic Equations::         
+* Cubic Equations::             
+* General Polynomial Equations::  
 * Roots of Polynomials Examples::  
 * Roots of Polynomials References and Further Reading::  
 @end menu
 
-@node Polynomial evaluation
-@section Polynomial evaluation
+@node Polynomial Evaluation
+@section Polynomial Evaluation
 @cindex polynomial evaluation
 @cindex evaluation of polynomials
 
@@ -28,9 +29,41 @@ This function evaluates the polynomial
 Horner's method for stability.  The function is inlined when possible.
 @end deftypefun
 
+@node Divided Difference Representation of Polynomials
+@section Divided Difference Representation of Polynomials
+@cindex divided differences, polynomials
+@cindex evaluation of polynomials, in divided difference form
 
-@node  Quadratic equations
-@section Quadratic equations
+The functions described here manipulate polynomials stored in Newton's
+divided-difference representation.  The use of divided-differences is
+described in Abramowitz & Stegun sections 25.1.4, 25.2.26.
+
+@deftypefun int gsl_poly_dd_init (double dd[], const double xa[], const double ya[], size_t @var{size})
+This function computes a divided-difference representation of the
+interpolating polynomial for the points (@var{xa}, @var{ya}) stored in
+the arrays @var{xa} and @var{ya} of length @var{size}.  On output the
+divided-differences of (@var{xa},@var{ya}) are stored in the array
+@var{dd}, also of length @var{size}.
+@end deftypefun
+
+@deftypefun double gsl_poly_dd_eval (const double dd[], const double xa[], const size_t @var{size}, const double @var{x})
+This function evaluates the polynomial stored in divided-difference form
+in the arrays @var{dd} and @var{xa} of length @var{size} at the point
+@var{x}.
+@end deftypefun
+
+@deftypefun int gsl_poly_dd_taylor (double c[], double @var{xp}, const double dd[], const double xa[], size_t @var{size}, double w[])
+This function converts the divided-difference representation of a
+polynomial to a Taylor expansion.  The divided-difference representation
+is supplied in the arrays @var{dd} and @var{xa} of length @var{size}.
+On output the Taylor coefficients of the polynomial expanded about the
+point @var{xp} are stored in the array @var{c} also of length
+@var{size}.  A workspace of length @var{size} must be provided in the
+array @var{w}.
+@end deftypefun
+
+@node  Quadratic Equations
+@section Quadratic Equations
 @cindex quadratic equation, solving
 
 @deftypefun int gsl_poly_solve_quadratic (double @var{a}, double @var{b}, double @var{c}, double *@var{x0}, double *@var{x1})
@@ -94,8 +127,8 @@ their imaginary components.
 @end deftypefun
 
 
-@node Cubic equations
-@section Cubic equations
+@node Cubic Equations
+@section Cubic Equations
 @cindex cubic equation, solving
 
 @deftypefun int gsl_poly_solve_cubic (double @var{a}, double @var{b}, double @var{c}, double *@var{x0}, double *@var{x1}, double *@var{x2})
@@ -152,8 +185,8 @@ and then by their imaginary components.
 @end deftypefun
 
 
-@node General polynomial equations
-@section General polynomial equations
+@node General Polynomial Equations
+@section General Polynomial Equations
 @cindex general polynomial equations, solving
 
 The roots of polynomial equations cannot be found analytically beyond
